@@ -1,4 +1,7 @@
 *.[oa]
+\#*#
+.#*
 *~
 example
 docs/
+.~*
