@@ -1,5 +1,5 @@
 CC      = /usr/bin/gcc
-CFLAGS  = -Wall -O3 `pkg-config --cflags glib-2.0`
+CFLAGS  = -Wall -Wextra -O3 `pkg-config --cflags glib-2.0`
 LDFLAGS = `pkg-config --libs glib-2.0 gio-2.0`
 DEPENDFILE = .depend
 
